tests/error/poly_errors/return_mismatch.err
Guppy compilation failed. Error in file $FILE:17

15:    @guppy(module)
16:    def main() -> None:
17:        x: bool = foo()
                     ^^^^^
GuppyTypeError: Expected expression of type `bool`, got `(?T, ?T)`
